# fans_repository

./: .gitignore  README.md  config.example.json  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
Mods/: .gitkeep  README.ru.md
docs/: DEVELOPER.ru.md  GITHUB_RELEASE.ru.md  MANIFEST_SERVER.ru.md
public/: manifest.json
public/launcher/: manifest.json
scripts/: analyze-mod-sides.mjs  apply-mod-sides.mjs  create-icon.mjs  hash-yandex.mjs  map-yandex-urls.mjs  mod-urls.json  sync-manifest.mjs  tauri-build.mjs
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/keys/: fans-launcher.key.pub
src-tauri/src/: commands.rs  config.rs  download_control.rs  lib.rs  main.rs  mods.rs  process_util.rs
src/components/: AlertBanner.tsx  AppFooter.tsx  AppHeader.tsx  AppSidebar.tsx  ContentHeader.tsx  CustomTitlebar.tsx  DownloadControls.tsx  FolderSelector.tsx  LogView.tsx  MainHero.tsx  MainPlayBar.tsx  MainQuickActions.tsx  MainView.tsx  ModsPanel.tsx  ModsView.tsx  PlayButton.tsx  ProgressBar.tsx  ServerCard.tsx  SettingsView.tsx  StatusBadge.tsx  StatusLog.tsx  StepIndicator.tsx  UpdateNotificationsBar.tsx  ViewHeader.tsx
src/context/: ModalContext.tsx
webmap/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+35 files in other folders)
