[package]
name = "fans-launcher"
version = "1.0.21"
description = "7 Days to Die launcher for closed group"
authors = ["Fans"]
edition = "2021"

[lib]
name = "fans_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
zip = "0.6"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
dirs = "5.0"
hex = "0.4"
futures-util = "0.3"
urlencoding = "2"
tauri-plugin-process = "2"
sysinfo = "0.33"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
